src/objects/FA_UserPreference__c.object
<CustomObject>
    <fields>
        <fullName>FA_Arrival_Carrier__c</fullName>
        <label>Arrival Carrier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Arrival_Flight_Number__c</fullName>
        <label>Arrival Flight Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Arrival_Terminal__c</fullName>
        <label>Arrival Terminal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Company_code__c</fullName>
        <label>Company code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Cost_Centre_nr__c</fullName>
        <label>Cost Centre nr</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Departure_Carrier__c</fullName>
        <label>Departure Carrier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Departure_Flight_Number__c</fullName>
        <label>Departure Flight Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Departure_Terminal__c</fullName>
        <label>Departure Terminal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_DietaryPreference__c</fullName>
        <label>Dietary Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Vegetarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Fish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Red Meat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gluten free-Coeliac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy to Shellfish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy to Nuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Dairy Products</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FA_Education__c</fullName>
        <label>Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FA_Occurence_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Occurence Member</label>
        <referenceTo>FA_Occurence_Member__c</referenceTo>
        <relationshipName>UserPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FA_Other_dietary_requirements__c</fullName>
        <label>Other Dietary Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FA_Personal__c</fullName>
        <label>Personal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FA_Prior_Career__c</fullName>
        <label>Prior Career</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FA_Role__c</fullName>
        <label>Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FA_Secretary_Name__c</fullName>
        <label>Secretary Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Secretary_PhoneNumber__c</fullName>
        <label>Secretary Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FA_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a required field</inlineHelpText>
        <label>Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FA_Unilever_Career__c</fullName>
        <label>Unilever Career</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FA_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FA_UserPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Preference</label>
    <nameField>
        <displayFormat>UP-{00000}</displayFormat>
        <label>UserPreferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>